# asterix-specs

./: .gitattributes  Dockerfile  LICENSE  README.md  STRUCTURE.md  aspecs.html  asterix-spec.nix  asterix-specs.cabal  conv.nix  converter-generated.nix  converter.nix  default.nix  deps.nix  faq.html  gitrev.txt  index.html  justfile  manifest.json  nixpkgs.json  result  shell.nix  source.html  specs.html  struct.html  syntax.html  tools.html
.github/workflows/: main.yml
Data/Asterix/: Parser.hs  Types.hs
_tools-old/: .ghci
_tools-old/app/: Aspecs.hs
_tools-old/folds/: Folds.hs  README.md  numbers.hs
_tools-old/lib/Asterix/: Indent.hs  Specs.hs
aspecs/: .ghci  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  aspecs.cabal  default.nix
aspecs/app/: Main.hs
aspecs/folds/: Folds.hs  README.md  extensions.hs  group-in-group.hs  numbers.hs  strings.hs  units.hs
aspecs/lib/: Indent.hs
aspecs/lib/Asterix/: Indent.hs  Pandoc.hs  Specs.hs
aspecs/lib/Asterix/Specs/: Indent.hs  Pandoc.hs  Syntax.hs  Syntaxes.hs  Types.hs  Validation.hs
aspecs/lib/Asterix/Specs/Syntax/: Ast.hs  Internal.hs  Json.hs  Xml.hs
aspecs/other/: Paths_aspecs.hs
bds/: registers.ast
category_test_python/: render_single.py
converter/: converter.cabal  default.nix  generated.nix  shell.nix  static.nix  static2.nix  static3.nix  static4.nix
converter/src/: Main.hs  TH.hs
converter/src/Data/: Asterix.hs
converter/src/Data/Asterix/: Common.hs  Parser.hs  Syntax.hs  Types.hs  Validation.hs
css/: default.css
doc/: asterix-syntax.tcl  bubbleToPostscript.tcl  content-syntax.tcl  item-syntax.tcl  top-item-syntax.tcl
html/: default.nix  index.html  render_jinja.py  style.css
json-to-rst/: default.nix  json-to-rst  setup.py
migrations/: README.md
migrations/2023-12-number/: Main.hs  README.md  shell.nix
migrations/2023-12-number/nix/: aspecs.json
migrations/2024-03-sizes/: README.md
migrations/2024-07-cleanup/: README.md  convertspec.py
nix/: README.md  sources.json
publisher/: Makefile  conf.py  default.nix  deps.nix  index.rst  rst.py  run.sh  shell.nix  style.css
renderer/: LICENSE  README.md  default.nix  setup.py
renderer/formats/: ast.py  common.py  minimal.py
rst-to-pdf/: default.nix  rst-to-pdf
specs/: asterix-spec.nix  build_spec.sh  default.nix  imaginary.ast  justfile  preamble.tex  shell.nix  spec.nix
specs/cat001/: cat-1.2.ast  cat-1.3.ast  cat-1.4.ast
specs/cat001/cats/cat1.2/: definition.html  definition.json  definition.pandoc.native  definition.rst  definition.txt
specs/cat001/cats/cat1.3/: definition.ast  definition.html  definition.json  definition.pandoc.native  definition.rst
specs/cat001/cats/cat1.4/: definition.html  definition.json  definition.pandoc.native  definition.rst  definition.txt
specs/cat002/: cat-1.0.ast  cat-1.1.ast
specs/cat002/cats/cat1.0/: definition.ast  definition.html  definition.json  definition.pandoc.native  (+2 more)
specs/cat004/: cat-1.12.ast
specs/cat007/: cat-1.12.ast
specs/cat008/: cat-1.2.ast  cat-1.3.ast  v1.2.ast
specs/cat009/: cat-2.1.ast
specs/cat010/: cat-1.1.ast
specs/cat011/: cat-1.2.ast  cat-1.3.ast  v1.2.ast  v1.3.ast
specs/cat015/: cat-1.0.ast  cat-1.1.ast  cat-1.2.ast  remarks.md
specs/cat016/: cat-1.0.ast
specs/cat017/: cat-1.3.ast
specs/cat018/: cat-1.7.ast  cat-1.8.ast
specs/cat019/: cat-1.3.ast  v1.3.ast
specs/cat020/: cat-1.10.ast  cat-1.9.ast  v1.9.ast
specs/cat021/: cat-0.23.ast  cat-0.24.ast  cat-0.25.ast  cat-0.26.ast  cat-2.1.ast  cat-2.2.ast  cat-2.3.ast  cat-2.4.ast  cat-2.5.ast  cat-2.6.ast  ref-1.4.ast  ref-1.5.ast  remarks.md  v2.4.ast
specs/cat023/: cat-1.2.ast  cat-1.3.ast  v1.2.ast
specs/cat025/: cat-1.5.ast
specs/cat032/: cat-1.1.ast
specs/cat034/: cat-1.27.ast  cat-1.28.ast  cat-1.29.ast
specs/cat048/: cat-1.27.ast  cat-1.28.ast  cat-1.29.ast  cat-1.30.ast  cat-1.31.ast  cat-1.32.ast  ref-1.11.ast
specs/cat062/: ChangeLog.md  cat-1.17.ast  cat-1.18.ast  cat-1.19.ast  cat-1.20.ast  cat-1.21.ast  ref-1.2.ast  ref-1.3.ast  ref-1.4.ast  remarks.md  v1.17.ast  v1.18.ast
specs/cat063/: cat-1.6.ast
specs/cat065/: cat-1.4.ast  cat-1.5.ast  cat-1.6.ast
specs/cat150/: cat-3.0.ast
specs/cat205/: cat-1.0.ast
specs/cat240/: cat-1.3.ast
specs/cat247/: cat-1.2.ast  cat-1.3.ast
specs/test/: README.md  test-basic.ast  test-cat-000-1.0-basic.ast  test-cat-001-1.0-multiple-uaps-with-selector.ast  test-multiple-uaps-without-selector.ast  test-ref-000-1.0-expansion.ast  test-ref-000-1.1-expansion-two-bytes-fspec.ast
style/: default.css
syntax/: README.md  asterix-syntax.ps  asterix-syntax.tcl  asterix-syntax.tcl.ps  bds-syntax.ps  bds-syntax.tcl  bubbleToPostscript.tcl  case-syntax.ps  case-syntax.tcl  content-syntax.ps  content-syntax.tcl  content-syntax.tcl.ps  convertAll.sh  default.nix  expansion-syntax.ps  expansion-syntax.tcl  expansion-syntax.tcl.ps  item-syntax.ps  item-syntax.tcl  item-syntax.tcl.ps  subitem-syntax.ps  subitem-syntax.tcl  subitem-syntax.tcl.ps  top-item-syntax.tcl  top-item-syntax.tcl.ps  uap-syntax.ps  uap-syntax.tcl  uap-syntax.tcl.ps
to-pdf/: default.nix  preamble.tex  to-pdf
tools/: CHANGELOG.md  LICENSE  aspecs.cabal  converter.cabal  default.nix  generated.nix  tools.cabal
tools/app/: Aspecs.hs  Ast-to-rst.hs  Main.hs
tools/folds/: Folds.hs  README.md  extensions.hs  numbers.hs  units.hs
tools/lib/Asterix/: Indent.hs  Specs.hs
tools/lib/Asterix/Specs/: Common.hs  Indent.hs  Syntax.hs  Types.hs  Validation.hs
tools/lib/Asterix/Specs/Syntax/: Ast.hs  Json.hs
tools/other/: Paths_aspecs.hs  Paths_converter.hs
tools/src/: Main.hs
tools/src/Data/: Asterix.hs
tools/src/Data/Asterix/: Common.hs  Indent.hs  Syntax.hs  Types.hs  Validation.hs
tools/src/Data/Asterix/Syntax/: Ast.hs  Json.hs  Xml.hs
website/: contrib.md  converter.md  default.nix  faq.md  generated.nix  index.md  shell.nix  site.hs  source.md  spec.nix  specs.nix  struct.md  tools.md  types_simple.hs  website.cabal
website/css/: default.css
website/templates/: aspecs.md  default.html  specs.md  struct.md  syntax.md  tools.md
(+356 files in other folders)
