cabal-version:      3.0
name:               aspecs
version:            2.2.2
synopsis:           Asterix specifications tools.
-- description:
homepage:           https://zoranbosnjak.github.io/asterix-specs/
bug-reports:        https://github.com/zoranbosnjak/asterix-specs/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@via.si
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

flag nopandoc
    Description: Disable pandoc support
    Default:     False

flag checkunused
    Description: Check unused packages
    Default:     False

common pandoc
    if flag(nopandoc)
        cpp-options:   -DNOPANDOC
        build-depends:
    else
        build-depends:
            pandoc
            , pandoc-types

common check
    if flag(checkunused)
        ghc-options:
            -Wunused-packages
    else
        ghc-options:

common base
    ghc-options:
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
    default-language:
        GHC2021
    build-depends:
        base < 5
        , text

library
    import:           base, pandoc, check
    exposed-modules:
        Asterix.Indent
        Asterix.Specs
        Asterix.Specs.Types
        Asterix.Specs.Validation
        Asterix.Specs.Syntax
        Asterix.Specs.Syntax.Internal
        Asterix.Specs.Syntax.Ast
        Asterix.Specs.Syntax.Json
        Asterix.Specs.Syntaxes
        Asterix.Pandoc
    -- other-modules:
    -- other-extensions:
    build-depends:
        , aeson
        , aeson-pretty
        , transformers
        , megaparsec
        , parser-combinators
        , formatting
        , pretty-show
        , scientific
    hs-source-dirs:   lib

executable aspecs
    import:           base, pandoc, check
    ghc-options:
        -O2 -rtsopts -funbox-strict-fields -with-rtsopts=-T -threaded
    main-is:          Main.hs
    other-modules:
        Paths_aspecs
    -- other-extensions:
    build-depends:
        base < 5
        , aspecs
        , with-utf8
        , optparse-applicative
        , bytestring
        , cryptonite
    hs-source-dirs:   app
