cabal-version:      2.4
name:               aspecs
version:            1.8.0
synopsis:           Asterix specifications tools.
-- description:
homepage:           https://zoranbosnjak.github.io/asterix-specs/
bug-reports:        https://github.com/zoranbosnjak/asterix-specs/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Zoran Bošnjak
maintainer:         zoran.bosnjak@sloveniacontrol.si
-- copyright:
category:           Data
extra-source-files:
    CHANGELOG.md

common deps
    build-depends:
        base < 5
        , formatting
        , scientific
        , megaparsec
        , parser-combinators
        , aeson
        , aeson-pretty
        , unordered-containers
        , transformers
        , text
        , bytestring
        , lens
        , with-utf8
        , optparse-applicative
        , cryptonite

common opts
    other-extensions: AllowAmbiguousTypes
    default-language: Haskell2010
    default-extensions:
        ApplicativeDo
        BangPatterns
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DeriveFoldable
        DeriveFunctor
        DeriveGeneric
        DeriveLift
        DeriveTraversable
        DerivingStrategies
        EmptyCase
        ExistentialQuantification
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        MultiWayIf
        NamedFieldPuns
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        TypeFamilies
        TypeFamilyDependencies
        TypeOperators

common app
    other-modules:
        Paths_aspecs
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
        -O2 -rtsopts -funbox-strict-fields -with-rtsopts=-T -threaded
        -Wall
        -Wincomplete-uni-patterns
        -Wincomplete-record-updates
        -Wcompat
        -Widentities
        -Wredundant-constraints
    default-extensions: StrictData
    build-depends:
        aspecs

library
    import: deps, opts
    exposed-modules:
        Asterix.Indent
        Asterix.Specs
        Asterix.Specs.Common
        Asterix.Specs.Syntax
        Asterix.Specs.Syntax.Ast
        Asterix.Specs.Syntax.Json
        Asterix.Specs.Types
        Asterix.Specs.Validation
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:
        lib
    default-language: Haskell2010

executable aspecs
    import: deps, opts, app
    main-is: Aspecs.hs

executable ast-to-rst
    import: deps, opts, app
    main-is: Ast-to-rst.hs
