cabal-version:       >=1.10

name:                aspecs
version:             0.8.0
synopsis:            asterix specs tools
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              KZPS
maintainer:          zoran.bosnjak@sloveniacontrol.si
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable aspecs
  main-is:             Main.hs
  other-modules:
    Data.Asterix
    Data.Asterix.Common
    Data.Asterix.Indent
    Data.Asterix.Syntax
    Data.Asterix.Syntax.Ast
    Data.Asterix.Syntax.Json
    Data.Asterix.Syntax.Xml
    Data.Asterix.Types
    Data.Asterix.Validation
    Paths_aspecs
  -- other-extensions:
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -O2 -rtsopts -funbox-strict-fields -with-rtsopts=-T -threaded
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wcompat
    -Widentities
    -Wredundant-constraints
  default-extensions: StrictData
  build-depends:
    base < 5
    , text
    , megaparsec
    , bytestring
    , base16-bytestring
    , base64-bytestring
    , text
    , formatting
    , directory
    , filepath
    , time
    , containers
    , unordered-containers
    , QuickCheck
    , stm
    , clock
    , optparse-applicative
    , aeson
    , aeson-pretty
    , transformers
    , cryptonite

