name:               website
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  ghc-options:
    -threaded
    -Wunused-packages
  default-language: Haskell2010
  build-depends:
    base < 5
    , hakyll
    , aeson
    , directory
    , bytestring

